tests/fixtures/invalid/int_floordiv_list.py
# Cannot floor divide Int and List[int]
x: int = 1 // [1, 2, 3]
